# Assignment-Grader-Pro-v6

./: .env  AssignmentGraderPro.spec  INSTALL.md  QUICK_START.md  README.md  admin.py  file_processor.py  groq_comparator.py  main.py  mistral_comparator.py  ollama_comparator.py  openai_comparator.py  openai_compatible_comparator.py  openrouter_comparator.py  pdf_processor.py  pyproject.toml  replit.nix  report_generator.py  requirements.txt  run_grader.bat  scoring.py  scoring_criteria.py  statistical_analyzer.py  text_comparator.py
