[project]
name = "repl-nix-assignmentgraderpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.11.0",
    "mistralai>=1.2.2",
    "numpy>=2.1.3",
    "ollama>=0.3.3",
    "openai>=1.54.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.26.1",
    "reportlab>=4.2.5",
    "requests>=2.32.3",
    "scikit-learn",
    "scipy>=1.14.1",
    "streamlit>=1.5.2",
]
